--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>POD Nasa</title>
+    <script src="script.js" defer></script> 
+    <link rel="stylesheet" href="style.css">
+    <title>APOD Nasa</title>
 </head>
 <body>
-    
+    <div class="container">
+
+    </div>
+    <h1>Astronomy Picture of the Day</h1>
+    <div id="title-div">
+        <h2 id="title"></h2>
+    </div>
+    <div id="date-div">
+        <p id="date"></p>
+    </div>
+    <div class="picture-explanation-container">
+        <img src="" id="picture" alt="Astronomy picture by NASA">
+        <p id="explanation"></p>
+    </div>
 </body>
 </html>
