--- a/index.html
+++ b/index.html
@@ -10,18 +10,21 @@
 </head>
 <body>
     <div class="container">
-
-    </div>
-    <h1>Astronomy Picture of the Day</h1>
-    <div id="title-div">
-        <h2 id="title"></h2>
-    </div>
-    <div id="date-div">
-        <p id="date"></p>
-    </div>
-    <div class="picture-explanation-container">
-        <img src="" id="picture" alt="Astronomy picture by NASA">
-        <p id="explanation"></p>
+        <h1>Astronomy Picture of the Day</h1>
+        <div id="title-div">
+            <h2 id="title"></h2>
+        </div>
+        <div id="date-div">
+            <p id="date"></p>
+        </div>
+        <div class="picture-explanation-container">
+            <div class="horiz">
+                <button id="back">Back</button>
+                <img src="" id="picture" alt="Astronomy picture by NASA">
+                <button id="next">Next</button>
+            </div>    
+            <p id="explanation"></p>
+        </div>
     </div>
 </body>
 </html>
