--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js" defer></script> 
+    <script type="text/javascript" src="config.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>APOD Nasa</title>
 </head>
@@ -19,7 +20,7 @@
         </div>
         <div class="picture-explanation-container">
             <div class="horiz">
-                <button id="back">Back</button>
+                <button id="back">Previous</button>
                 <img src="" id="picture" alt="Astronomy picture by NASA">
                 <button id="next">Next</button>
             </div>    
